--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Navbar start-->
     <div class="bg-pink-100">
         <div class="flex pt-5 mx-20 pb-2 justify-between">
-            <button class="btn-sm rounded-md bg-lime-300 w-20 ">Blog</button>
+            <button id="blog" class="btn-sm rounded-md bg-lime-300 w-20 ">Blog</button>
              <div class="flex gap-5">
                 <img  src="assets/logo.png" alt="" srcset="">
                 <h2 class="mt-2">Donate Bangladesh</h2>
